unpackaged/main/default/objects/project_cloud__Board__c/project_cloud__Board__c.object-meta.xml
<CustomObject>
    <label>Board</label>
    <nameField>
        <label>Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>