unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Board_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Board Process utilized by this Board</inlineHelpText>
    <label>Board Process</label>
    <referenceTo>project_cloud__Board_Process__c</referenceTo>
    <relationshipLabel>Boards</relationshipLabel>
    <relationshipName>Boards</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>