unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Card_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Card_Count__c</fullName>
    <description>A Count of the number of Cards on the Board</description>
    <inlineHelpText>Total Count of Cards on this Board</inlineHelpText>
    <label>Total Card Count</label>
    <summaryForeignKey>project_cloud__Card__c.project_cloud__Board__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>