unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Completed_Card_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Card_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Count of Completed Cards on this Board</inlineHelpText>
    <label>Total Completed Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>