unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Completed_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed_Percent__c</fullName>
    <formula>IF(project_cloud__Card_Count__c == project_cloud__On_Hold_Card_Count__c, 0, project_cloud__Total_Card_Weight__c / ((project_cloud__Card_Count__c - project_cloud__On_Hold_Card_Count__c) * 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Completion Percentage of this Board. Calculated via Card Completion.</inlineHelpText>
    <label>Completion (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>