unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <formula>IF(
        ISBLANK(project_cloud__Project_Phase__c),
        IF(
            ISBLANK(project_cloud__Project_Task__c),
            null,
            project_cloud__Project_Task__r.project_cloud__End__c
        ),
        project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Autonomous_End__c
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>End Date of this Board based on Parent End Dates</inlineHelpText>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>