unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__On_Hold_Card_Count__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__On_Hold_Card_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Count of On Hold Cards on this Board</inlineHelpText>
    <label>Total On Hold Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>