unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project Phase that this Board is associated with</inlineHelpText>
    <label>Project Phase</label>
    <referenceTo>project_cloud__Project_Phase__c</referenceTo>
    <relationshipLabel>Boards</relationshipLabel>
    <relationshipName>Boards</relationshipName>
    <type>Lookup</type>
</CustomField>