unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Total_Card_Weight__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Card_Weight__c</fullName>
    <inlineHelpText>Sum of all the Weight values of the Cards.</inlineHelpText>
    <label>Total Card Weight</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>