unpackaged/main/default/objects/project_cloud__Board__c/fields/project_cloud__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Worked_Hours__c</fullName>
    <inlineHelpText>This field will capture the amount of hours a user has entered against the Board.</inlineHelpText>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>